--- a/clinic/templates/clinic/base.html
+++ b/clinic/templates/clinic/base.html
@@ -66,7 +66,6 @@
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
                         <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="{% url 'about_us' %}">About Us</a>
                         <a class="nav-link {% if request.path == '/login/' %}active{% endif %}" href="{% url 'login' %}">Login</a>
-                        <a class="nav-link {% if request.path == '/register/' %}active{% endif %}" href="{% url 'register' %}">Register</a>
                     {% endif %}
 
                     {% if request.user.is_staff and not request.user.vet_profile|default:False %}
@@ -122,9 +121,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
-                        <li><a href="{% url 'pet_list' %}">Pets</a></li>
-                        <li><a href="{% url 'appointment_list' %}">Appointments</a></li>
+                        <li><a href="{% url 'about_us' %}">About Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
